config: Material UI install

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Gabriella Guimarães - Portfolio"
+      content="Portfólio de Gabriella Guimarães, desenvolvedora web fullstack especializada em tecnologias modernas como Next.js, React, Angular, Javascript e Node.js."
+      keywords="Desenvolvedora Fullstack, Web Developer, Next.js, React, Node.js, Javascript, Typescript, Angular, .Net, ASP NET, FrontEnd, Front-End, FrontEnd Developer, Landing Pages, Portfólio, Portfolio, Freelancer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,6 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    </style>
     <title>Gabriella Guimarães - Portfolio</title>
   </head>
   <body>
