--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +10,7 @@
       content="Portfólio de Gabriella Guimarães, desenvolvedora web fullstack especializada em tecnologias modernas como Next.js, React, Angular, Javascript e Node.js."
       keywords="Desenvolvedora Fullstack, Web Developer, Next.js, React, Node.js, Javascript, Typescript, Angular, .Net, ASP NET, FrontEnd, Front-End, FrontEnd Developer, Landing Pages, Portfólio, Portfolio, Freelancer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
